// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoubleAction renders buttons with dark skin 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
            
            
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders buttons with dark skin 2`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
            
            
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders buttons with light skin 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
            
            
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders with base props 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
            
            
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders with isHorizontal 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
            
             lab-card-double-action--horizontal
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders with size 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--small
            
            
          "
>
  <button
    className="lab-btn lab-btn--default lab-btn--small"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--outline lab-btn--small"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;

exports[`DoubleAction renders with text buttons 1`] = `
<section
  className="lab-card-double-action lab-card-double-action--normal
             lab-card-double-action--text
            
          "
>
  <button
    className="lab-btn lab-btn--text lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 1
  </button>
  <button
    className="lab-btn lab-btn--text lab-btn--normal"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Action 2
  </button>
</section>
`;
